# tech-challenge-fase2

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: api.md  arquitetura.md  relatorio-tecnico.md
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  markdown.ts  page.tsx
frontend/app/api/report/: route.ts
frontend/tests/: api-report.test.mjs  markdown.test.mjs  rendered-html.test.mjs
output/: llm_prompt.txt  report.txt  run_history.json  summary.json
scripts/: demo.py
src/hospital_routes/: __init__.py  cli.py  data.py  models.py  optimizer.py  reporting.py  visualization.py
tests/: test_optimizer.py  test_reporting.py
