[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hospital-routes"
version = "0.1.0"
description = "Otimizacao de rotas hospitalares com algoritmo genetico"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0"]

[project.scripts]
hospital-routes = "hospital_routes.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

